titanic_사망자분석

--- a/titanic_dataset_jupyter.ipynb
+++ b/titanic_dataset_jupyter.ipynb
@@ -2253,7 +2253,9 @@
    "id": "6fe09b00-4c6f-410a-a840-fee45cc3e239",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#titanic의 사망자를 분석하는 프로젝트를 진행해보았습니다. dataset의 경로를 지정하는데 어려움이 있었지만 잘 해결하여 학습시켜 결과물을 얻었습니다."
+   ]
   }
  ],
  "metadata": {
